fixed trailer placeholder height on mobile

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -552,6 +552,7 @@ main {
 }
 
 #video-player {
+  display: flex;
   background: $black;
 
   @media screen and (max-width: 1500px) {
